# ilswlol

./: .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  acquire_session.py  data_preprocessor.py  generate_data.py  learn.py  local_env.sh  not_that_arma.py  pyproject.toml  requirements.txt  runner.py  simple_nn.py  train.py  uwsgi_local_dev.ini
ansible/: ansible.cfg  hosts  ilswlol_nginx.conf.j2  ilswlol_uwsgi.ini.j2  site.yml
deploy/: ilswlol.service.j2  ilswlol_nginx.conf.j2  site.yml
ilswlol/: __init__.py  app.py  flask_routes.py  main.py  providers.py  steam.py  tasks.py  telegram.py  telethon.py  tg_listener.py  uswgi.py  utils.py
ilswlol/static/: ilswlol.css
ilswlol/templates/: index.html
